--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,15 @@ python:
   - 2.7
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox-travis
+install: 
+  - pip install -U tox-travis
+  - pip install python-coveralls
 
 # command to run tests, e.g. python setup.py test
 script: tox
+
+after_success:
+  - coveralls
 
 # After you create the Github repo and add it to Travis, run the
 # travis_pypi_setup.py script to finish PyPI deployment setup
