--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,13 @@ commands=flake8 prakriya
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-
 commands = python setup.py test
+deps = -r{toxinidir}/requirements_dev.txt
+
+[pytest]
+addopts = --ignore=setup.py
+python_files = *.py
+python_functions = test_
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
