--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
   - pip install -U tox-travis
-  - pip install coveralls
+  - pip install -r requirements_dev.txt
 
 # command to run tests, e.g. python setup.py test
 script: 
   - tox
-  - coverage run --source icon_font_to_png -m py.test
+  - coverage run -m py.test
   - coverage report -m
 
 after_success:
