--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,10 @@ commands=flake8 prakriya
 setenv =
     PYTHONPATH = {toxinidir}
 commands = python setup.py test
-deps = -r{toxinidir}/requirements_dev.txt
+deps = -r{toxinidir}/requirements_doc.txt
 
 [pytest]
-addopts = --ignore=setup.py
+addopts = --ignore=setup.py --ignore=travis_pypi_setup.py
 python_files = *.py
 python_functions = test_
 
