--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands=flake8 prakriya
 setenv =
     PYTHONPATH = {toxinidir}
 commands = python setup.py test
-deps = -r{toxinidir}/requirements_doc.txt
+deps = -r{toxinidir}/requirements_docs.txt
 
 [pytest]
 addopts = --ignore=setup.py --ignore=travis_pypi_setup.py
