--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: 
   - pip install -U tox-travis
-  - pip install -r requirements_doc.txt
+  - pip install -r requirements_docs.txt
 
 # command to run tests, e.g. python setup.py test
 script: 
