--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands = python setup.py test
 deps = -r{toxinidir}/requirements_docs.txt
 
 [pytest]
-addopts = --ignore=setup.py --ignore=travis_pypi_setup.py
+addopts = --ignore=setup.py --ignore=travis_pypi_setup.py --ignore=*site-package*
 python_files = *.py
 python_functions = test_
 
