ignore inhouse scripts

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ prakriya/jsonind.py
 tests/speedtest.py
 prakriya/data/generated*
 prakriya/tests/useless.py
+tests/useless.py
+prakriya/data/dcs.json
+inhousescripts
