--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
   - 3.4
   - 3.3
   - 2.7
+  - "pypy"
+  - "pypy3"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
