--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -9,6 +9,6 @@ Sphinx==1.8.1
 cryptography==2.3.1
 PyYAML==3.13
 click==7.0
-indic_transliteration>=1.6.2
+indic_transliteration==1.7.4
 coveralls>=1.2.0
 ujson>=1.35
