--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,14 +1,14 @@
-pip==18.1
-bumpversion==0.5.3
-wheel==0.32.3
-watchdog==0.9.0
-flake8==3.6.0
-tox==3.5.3
-coverage==4.5.2
-Sphinx==1.8.2
-cryptography==2.4.2
-PyYAML==3.13
-click==7.0
+pip>=18.1
+bumpversion>=0.5.3
+wheel>=0.32.3
+watchdog>=0.9.0
+flake8>=3.6.0
+tox>=3.5.3
+coverage>=4.5.2
+Sphinx>=1.8.2
+cryptography>=2.4.2
+PyYAML>=3.13
+click>=7.0
 indic_transliteration==1.7.4
 coveralls>=1.2.0
 ujson>=1.35
